WikiService improvements, use URI instead of URL